Arreglos de dashboard terminados, faltan arreglar bugs

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -229,7 +229,7 @@ function updateTimeRangeDisplay() {
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Porcentaje de asistencia</p>
-                  <h5 class="mb-2 font-bold dark:text-white">$ ${summary.attendance_percentage}%</h5>
+                  <h5 class="mb-2 font-bold dark:text-white"> ${summary.attendance_percentage}%</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
                   </p>
