--- a/asistencias/asistencias_obras/templates/rh/lista_empleados.html
+++ b/asistencias/asistencias_obras/templates/rh/lista_empleados.html
@@ -2,17 +2,19 @@
 
 {% block content %}
 <h1 class="text-3xl text-black pb-6">Obras</h1>
-<form method="GET" action="">
+<form method="GET" action="">  <!-- Asegúrate de que esta línea esté presente -->
     <label for="obra-select">Seleccione una obra:</label>
     <select id="obra-select" name="obra_id" onchange="this.form.submit()">
-        <!-- Opción predeterminada para cuando no se ha seleccionado una obra -->
-        <option value="">Seleccionar obra</option>
+        <option value="">S                                                                                                                                                                              eleccionar obra</option>
+
         {% for obra in obras %}
-        <option value="{{ obra.id }}" {% if obra.id == request.GET.obra_id %}selected{% endif %}>{{ obra.nombre }}</option>
+        <option value="{{ obra.id }}" {% if obra.id == request.GET.obra_id %}selected{% endif %}>
+            {{ obra.nombre }}
+        </option>
         {% endfor %}
     </select>
     <noscript><input type="submit" value="Cargar"></noscript>
-</form>
+</form>                             
 
   
 <div class="w-full mt-6">
